Fixes item recommendation algorithm